fix image overflow

--- a/css/index.css
+++ b/css/index.css
@@ -282,6 +282,7 @@ body {
   margin-bottom: 135px;
   max-width: 1150px;
   background-color: var(--product-background-color);
+  overflow: hidden;
 }
 
 .overview {
