--- a/scss/modules/_product.scss
+++ b/scss/modules/_product.scss
@@ -18,6 +18,7 @@
     margin-bottom: 135px;
     max-width: 1150px;
     background-color:var(--product-background-color);
+    overflow:hidden;
 }
 
 
